<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkPurple"
    tools:context=".MainActivity5">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/statusBar"
        android:divider="@drawable/empty_tall_divider2"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headTextPersonalHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Personal History"
            android:textAlignment="center"
            android:textColor="#AD1457"
            android:textSize="28sp" />

        <Switch
            android:id="@+id/didYouHaveBreastCancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:ems="10"
            android:freezesText="false"
            android:minHeight="48dp"
            android:showText="true"
            android:switchMinWidth="60dp"
            android:text="Did you have Breast Cancer?"
            android:textColor="#AD1457"
            android:textOff="@string/n"
            android:textOn="@string/y"
            android:textSize="18sp"
            tools:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

        <EditText
            android:id="@+id/ageOfGivingBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/statusBar"
            android:ems="10"
            android:hint="Age of giving birth?"
            android:inputType="number"
            android:textColor="@color/statusBar"
            android:textColorHint="#AD1457" />

        <EditText
            android:id="@+id/mensturationAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/statusBar"
            android:ems="10"
            android:hint="Mensturation Age?"
            android:inputType="number"
            android:textColor="@color/statusBar"
            android:textColorHint="#AD1457" />

        <EditText
            android:id="@+id/menopauseAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/statusBar"
            android:ems="10"
            android:hint="Menopause Age?"
            android:inputType="number"
            android:textColor="@color/statusBar"
            android:textColorHint="#AD1457" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body_structure_head">

            <AutoCompleteTextView
                android:id="@+id/bodyStructure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:textColor="@color/statusBar"
                android:textColorHint="#AD1457"
                app:simpleItemSelectedColor="#AD1457" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/doYouBreastFeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:ems="10"
            android:freezesText="false"
            android:minHeight="48dp"
            android:showText="true"
            android:switchMinWidth="60dp"
            android:text="Do you breast feed?"
            android:textColor="#AD1457"
            android:textOff="@string/n"
            android:textOn="@string/y"
            android:textSize="18sp"
            tools:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/thirdToFourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>